<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/listActivity"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
 
	<TextView android:id="@+id/splashTitle"
		android:text="@string/type_b_title"
		android:textSize="16sp"
		android:textStyle="bold"
		android:padding="10sp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1">

		<LinearLayout
			android:orientation="vertical"
			android:background="#888888"
			android:layout_width="100sp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:paddingRight="10sp">

			<TextView
				android:text="@string/type_b_sidebar_description"
				android:textStyle="italic"
				android:padding="10sp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<ToggleButton 
			    android:id="@+id/togglebutton1"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textOn="@string/wireframe_on_label"
			    android:textOff="@string/wireframe_off_label"
			    android:paddingLeft="10sp"
			    android:onClick="onToggleClicked"/>
			<ToggleButton 
			    android:id="@+id/togglebutton2"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textOn="@string/controls_on_label"
			    android:textOff="@string/controls_off_label"
			    android:paddingLeft="10sp"
			    android:onClick="onToggleClicked"/>
			
		</LinearLayout>
	 
		<LinearLayout android:id="@+id/scene1Holder"
			android:gravity="center_horizontal"
			android:layout_height="fill_parent"
			android:layout_width="100sp"
			android:layout_weight="1"
			android:paddingLeft="10sp" />
		</LinearLayout>
 
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_weight="0.0"
			android:paddingTop="20sp">

			<Button 
				android:id="@+id/layoutOkay"
				android:text="OK"
				android:textSize="16sp"
			 	android:textStyle="bold"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:layout_height="wrap_content"/>
			<Button 
				android:id="@+id/layoutCancel"
				android:text="Cancel"
				android:textSize="16sp"
			 	android:textStyle="bold"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:layout_height="wrap_content" />
	
	</LinearLayout>

</LinearLayout>
